fix: rimozione bordi e sistemaz gap

--- a/style.css
+++ b/style.css
@@ -50,17 +50,15 @@ main {
 }
 
 .container {
-  border: 1px dashed purple;
   width: 90%;
   margin: 0 auto;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 5px;
+  gap: 7px;
 }
 
 .box {
-  border: 1px solid red;
   position: relative;
 }
 
